[travis] use python 3.7 on xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,9 @@ matrix:
     os: osx
   - python: "3.5"
   - python: "3.6"
-  - python: "3.7-dev"
+  - python: "3.7"
+    dist: xenial
+    sudo: true
   - env: BUILD=sdist
     python: "3.6"
 script:
