--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ matrix:
     os: osx
   - python: "3.5"
   - python: "3.6"
+  - python: "3.6"
+    dist: xenial
+    sudo: true
   - python: "3.7"
     dist: xenial
     sudo: true
