[travis] build ffmpeg 3.2 from source
PyAV now requires ffmpeg >= 3.0, which Ubuntu 16.04 does not have.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 addons:
   apt:
     packages:
-    - libavdevice-dev
-    - libavfilter-dev
     - libopus-dev
     - libvpx-dev
-cache: pip
+    - libx264-dev
+    - yasm
+cache:
+  directories: $HOME/.local
+  pip: true
 dist: xenial
-install: .travis/install
+install: source .travis/install
 language: python
 matrix:
   include:
@@ -17,6 +19,7 @@ matrix:
   - python: "3.6"
   - python: "3.7"
   - env: BUILD=sdist
+    install: true
     python: "3.6"
 script: .travis/script
 sudo: true
