[dtls] call SSL_CTX_set_ecdh_auto for OpenSSL 1.0.2
To ensure it works as expected, add some Travis profiles:

- using Xenial's OpenSSL 1.0.2g
- using Trusty's OpenSSL 1.0.1f

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,13 @@ matrix:
   - language: generic
     os: osx
   - python: "3.5"
+  - env: CRYPTOGRAPHY_NO_BINARY=1
+    dist: trusty
+    python: "3.5"
   - python: "3.6"
   - python: "3.7"
+  - env: CRYPTOGRAPHY_NO_BINARY=1
+    python: "3.7"
   - env: BUILD=sdist
     install: true
     python: "3.6"
