--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,10 @@
 [flake8]
-max-line-length=100
+ignore=E203,W503
+max-line-length=150
 
 [isort]
 default_section = THIRDPARTY
+include_trailing_comma = True
 known_first_party = aiortc
+line_length = 88
+multi_line_output = 3
