--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 recursive-include docs *.py *.rst Makefile
 recursive-include examples *.html *.py *.rst *.wav
-recursive-include src *.py
+recursive-include src/_cffi_src *.py
 recursive-include tests *.bin *.py
