[mypy] move settings back into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,5 +19,9 @@ multi_line_output = 3
 [mypy]
 disallow_untyped_calls = True
 disallow_untyped_decorators = True
+follow_imports = skip
+ignore_missing_imports = True
 mypy_path = stubs
 strict_optional = False
+warn_redundant_casts = True
+warn_unused_ignores = True
