[package] build wheels for PyPy 3

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -88,7 +88,7 @@ jobs:
           CIBW_BEFORE_BUILD_WINDOWS: python scripts\fetch-codecs C:\cibw\vendor
           CIBW_ENVIRONMENT: CFLAGS=-I/tmp/vendor/include LDFLAGS=-L/tmp/vendor/lib
           CIBW_ENVIRONMENT_WINDOWS: CL="/IC:\cibw\vendor\include" LINK="/LIBPATH:C:\cibw\vendor\lib"
-          CIBW_SKIP: cp27-* cp33-* cp34-* cp35-* pp*
+          CIBW_SKIP: cp27-* cp35-* pp27-*
         run: |
           pip install cibuildwheel
           cibuildwheel --output-dir dist
