[qa] update command line options for isort 5.x

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Run linters
         run: |
           flake8 examples src tests
-          isort -c -df -rc examples src tests
+          isort --check-only --diff examples src tests
           black --check --diff examples src tests
           mypy src
 
