[tests] pin mypy version to 0.782
Otherwise it fails with:

src/aiortc/mediastreams.py:22: error: No overload variant of "int" matches argument type "Fraction"
src/aiortc/mediastreams.py:22: note: Possible overload variant:
src/aiortc/mediastreams.py:22: note:     def __init__(self, x: Union[str, bytes, SupportsInt, _SupportsIndex] = ...) -> int
src/aiortc/mediastreams.py:22: note:     <1 more non-matching overload not shown>

See: https://github.com/python/mypy/issues/9588

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           python-version: 3.7
       - name: Install packages
-        run: pip install black flake8 isort mypy
+        run: pip install black flake8 isort mypy==0.782
       - name: Run linters
         run: |
           flake8 examples src tests
