--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python: [3.8, 3.7, 3.6]
+        python: [3.9, 3.8, 3.7, 3.6]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
