--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,8 +46,7 @@ jobs:
       - name: Run tests
         run: |
           python -m pip install -U pip setuptools wheel
-          pip install aiohttp coverage numpy websockets
-          pip install .
+          pip install .[dev]
           coverage run -m unittest discover -v
           coverage xml
         shell: bash
