--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python: [3.9, 3.8, 3.7, 3.6]
+        python:
+          - '3.9'
+          - '3.8'
+          - '3.7'
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
@@ -84,7 +87,7 @@ jobs:
           CIBW_BEFORE_BUILD_WINDOWS: python scripts\fetch-vendor C:\cibw\vendor
           CIBW_ENVIRONMENT: CFLAGS=-I/tmp/vendor/include LDFLAGS=-L/tmp/vendor/lib
           CIBW_ENVIRONMENT_WINDOWS: INCLUDE=C:\\cibw\\vendor\\include LIB=C:\\cibw\\vendor\\lib
-          CIBW_SKIP: cp27-* cp35-* pp27-*
+          CIBW_SKIP: cp36-* pp36-* *-musllinux*
         run: |
           pip install cibuildwheel
           cibuildwheel --output-dir dist
