[docs] test that documentation can be built without warnings
This should avoid ending up with broken documentation on readthedocs.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,6 +4,20 @@ on: [push, pull_request]
 
 jobs:
 
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Build documentation
+        env:
+          READTHEDOCS: 'True'
+        run: |
+          pip install . -r requirements/doc.txt
+          make -C docs html SPHINXOPTS=-W
+
   lint:
     runs-on: ubuntu-latest
     steps:
