--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
+[metadata]
+license_files = LICENSE
+project_urls =
+    Changelog = https://aiortc.readthedocs.io/en/stable/changelog.html
+    Documentation = https://aiortc.readthedocs.io/
+
 [coverage:report]
 exclude_lines =
     pragma: no cover
