--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,9 +11,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: 3.8
+      - name: Install OS packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install libopus-dev libvpx-dev
       - name: Build documentation
-        env:
-          READTHEDOCS: 'True'
         run: |
           pip install . -r requirements/doc.txt
           make -C docs html SPHINXOPTS=-W
