Build wheels using Python limited API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["cffi>=1.0.0", "setuptools"]
+requires = ["cffi>=1.0.0", "setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
