--other:修改编码器编码速率范围：0.1-3Mbps

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@
 /build
 /dist
 /docs/_build
-
+/res_picture/
+/dataset/
+/tests/
+/receive_data/
 # Environments
 .env
 .venv
@@ -19,3 +22,5 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+
