--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             // "program": "${workspaceFolder}/examples/server/server.py",
             "console": "integratedTerminal",
             "justMyCode": true,
-            // "args": ["offer","--play-from","./dataset/anamal-time.mp4","-v","-s", "tcp-socket", "--signaling-port", "2223"]
+            // "args": ["offer","--play-from","./dataset/driving.mp4","-v","-s", "tcp-socket", "--signaling-port", "2223"]
             "args": ["answer", "--record-to","./receive_data/anamal-1080p.mp4","-v","-s","tcp-socket","--signaling-port","2223"]
             // "args": ["answer","--record-to","./receive_data/test_recv.mp4"]
 
